add post-add page

--- a/templates/feeds/home.html
+++ b/templates/feeds/home.html
@@ -5,9 +5,9 @@
 {% endblock title %}
 {% block content %}
   <h1>All Post</h1>
+  <a href="{% url 'feeds__addpost' %}" style="text-decoration:none;">➕ Add Post</a>
   {% for post in posts %}
     <h3>{{ post.text }}</h3>
-    <br>
     <div>
       <a href="{% url 'feeds__detail' post.id %}">
         {% thumbnail post.image "200x200" crop="center" as im %}
