--- a/templates/base.html
+++ b/templates/base.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Django App |
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <title>Image Sharer |
       {% block title %}
       {% endblock title %}
     </title>
   </head>
   <body>
-    <div>
-      {% if messages %}
-        <ul class="messages">
-          {% for message in messages %}
-            <li {% if message.tags %}class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-          {% endfor %}
-        </ul>
-      {% endif %}
+    {% include "includes/navbar.html" %}
+    {% if messages %}
+      {% for message in messages %}
+        <div class="bg-{% if message.tags %}{{ message.tags }}{% else %}success{% endif %} bg-gradient text-center text-white py-4">
+          {{ message }}
+        </div>
+      {% endfor %}
+    {% endif %}
+    <div class="container">
+      {% block content %}
+      {% endblock content %}
     </div>
-    {% block content %}
-    {% endblock content %}
   </body>
 </html>
